@@ -1053,17 +1053,19 @@
 
     <!-- Includes all modules for javadoc.lwjgl.org -->
     <target name="javadoc" description="Generates the LWJGL JavaDoc" depends="-compile-generator,-build-version">
-        <echo message="It is recommended to generate JavaDoc on JDK 17 or higher." unless:set="jdk17" taskname="Warning"/>
+        <fail message="JavaDoc generation requires JDK 25 or higher." unless:set="jdk25"/>
+
         <delete dir="${bin.javadoc}"/>
 
         <path id="javadoc.sources">
+            <pathelement path="${module.lwjgl}/core25/src/main/java"/>
             <pathelement path="${module.javadocsourcepath}"/>
         </path>
 
         <javadoc
             destdir="${bin.javadoc}"
             sourcepathref="javadoc.sources"
-            source="9"
+            source="25"
             windowtitle="LWJGL ${build.version}"
             encoding="UTF-8"
             docencoding="UTF-8"
@@ -1089,63 +1091,7 @@
             <arg line="-Xdoclint:html,reference,syntax" unless:set="nodoclint"/>
             <arg line="-Xmaxerrs 1000 -Xmaxwarns 1000"/>
             <arg line="-notimestamp"/>
-            <arg value="-html5" if:set="jdk11"/>
-            <arg line="-J-Dfile.encoding=UTF-8 -J-Dstdout.encoding=UTF-8 -J-Dstderr.encoding=UTF-8 -J-Dline.separator=&#10;"/>
-            <arg line="--add-exports jdk.javadoc/com.sun.tools.doclets=ALL-UNNAMED" if:set="jdk11"/>
-        </javadoc>
-        <get-quiet name="favicon" url="https://www.lwjgl.org/favicon.ico" dest="${bin.javadoc}"/>
-    </target>
-
-    <target name="javadoc25" description="Generates the LWJGL JavaDoc">
-        <delete dir="${bin.javadoc}"/>
-
-        <path id="javadoc.sources">
-            <!--<pathelement path="${module.javadocsourcepath}"/>-->
-            <pathelement path="modules/samples/src/test/java25"/>
-        </path>
-
-        <javadoc
-            destdir="${bin.javadoc}"
-            sourcepathref="javadoc.sources"
-            source="21"
-            excludepackagenames="org.lwjgl.jmh"
-            windowtitle="LWJGL ${build.version}"
-            encoding="UTF-8"
-            docencoding="UTF-8"
-            charset="UTF-8"
-            useexternalfile="true"
-            nohelp="true"
-            notree="true"
-            public="true"
-            Splitindex="true"
-            failonerror="true"
-            verbose="true"
-        >
-            <doctitle><![CDATA[<h1>Lightweight Java Game Library</h1>]]></doctitle>
-            <bottom><![CDATA[<i>Copyright LWJGL. All Rights Reserved. <a href="https://www.lwjgl.org/license">License terms</a>.</i>]]></bottom>
-
-            <classpath>
-                <pathelement path="${bin.lwjgl}/core/META-INF/versions/25" if:set="core.java25"/>
-                <pathelement path="${bin.lwjgl}/core/META-INF/versions/17" if:set="core.java17"/>
-                <pathelement path="${bin.lwjgl}/core/META-INF/versions/11" if:set="core.java11"/>
-                <pathelement path="${module.classpath}"/>
-                <pathelement path="${bin.test}"/>
-                <pathelement path="${bin.samples}"/>
-                <pathelement path="${test.resources}"/>
-                <pathelement path="${lib}/java/testng.jar"/>
-                <pathelement path="${lib}/java/joml.jar"/>
-                <pathelement path="${lib}/java/jmh-core.jar"/>
-                <pathelement path="${lib}/java/commons-math3.jar"/>
-                <pathelement path="${lib}/java/jopt-simple.jar"/>
-                <pathelement path="${lib}/native"/>
-                <pathelement path="${lib}/java/jspecify.jar"/>
-            </classpath>
-
-            <arg value="-XDignore.symbol.file"/> <!-- Suppresses internal API (e.g. Unsafe) usage warnings -->
-
-            <arg line="-Xmaxerrs 1000 -Xmaxwarns 1000"/>
-            <arg line="-notimestamp"/>
-            <arg value="-html5" />
+            <arg value="-html5"/>
             <arg line="-J-Dfile.encoding=UTF-8 -J-Dstdout.encoding=UTF-8 -J-Dstderr.encoding=UTF-8 -J-Dline.separator=&#10;"/>
             <arg line="--add-exports jdk.javadoc/com.sun.tools.doclets=ALL-UNNAMED"/>
         </javadoc>
